project/syntax_tests/tests_input/unit/bad/Bad12.ty
singleton class StudentFactory { 
    
    functions: {
        getStudent: () -> Student = {
            student("Mark", 19)
        }
    }
}
